tests/baselines/reference/parserErrorRecovery_VariableList1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_VariableList1.ts (2 errors) ====
    var a,
         ~
!!! parserErrorRecovery_VariableList1.ts(1,6): error TS1009: Trailing comma not allowed.
    return;
    ~~~~~~
!!! parserErrorRecovery_VariableList1.ts(2,1): error TS1108: 'return' statement must be contained within a function body.